tests/ui/resolve/issue-23716.stderr
error[E0530]: function parameters cannot shadow statics
  --> $DIR/issue-23716.rs:5:8
   |
LL | static foo: i32 = 0;
   | -------------------- the static `foo` is defined here
LL |
LL | fn bar(foo: i32) {}
   |        ^^^ cannot be named the same as a static

error[E0530]: function parameters cannot shadow statics
  --> $DIR/issue-23716.rs:15:13
   |
LL | use self::submod::answer;
   |     -------------------- the static `answer` is imported here
LL |
LL | fn question(answer: i32) {}
   |             ^^^^^^ cannot be named the same as a static

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0530`.
